--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,12 @@ section {
 }
 
 img {
+    display: block;
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 150px;
+    width: 250px;
+    
 }
 
 ul {
