--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ textarea {
 	font-size: 18px;
 	text-align: center;
 }
-.social-icon a i {
+.social-icon a img {
 	width: 50px;
 	height: 50px;
 	border: 1px solid #cdcdcd;
